# PyspinCameras

./: .gitignore  Callbacks.py  CamEventHandler.py  Cameras.py  README.md  pyproject.toml  requirement.txt
__pycache__/: Exposure_QuickSpin.py
src/: SpinCameras_test.py
src/PyspinCameras/: CamEventHandler.py  CamReset.py  Cameras.py  __init__.py
src/PyspinCameras.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/SpinCameras/: Callbacks.py  CamEventHandler.py  Cameras.py  SpinCameras_test.py  __init__.py
src/SpinCameras.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
