[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SpinCameras"
version = "0.0.3"
authors = [
  { name = "Gilbert Eaton", email = "gilberteaton@gmal.com" },
  { name = "Jonathon Holder", email = "jonathon.holder.90@gmail.com" },
]
description = "An easy access package for Flir (Spinnaker) cameras."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gilbo123/SpinCameras"
Issues = "https://github.com/gilbo123/SpinCameras/issues"
